# lang-playground

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/src/interview_ai/: main.py
apps/api/src/interview_ai/agents/graphs/: interview_graph.py
apps/api/src/interview_ai/agents/nodes/: interview_nodes.py
apps/api/src/interview_ai/core/: config.py
apps/api/src/interview_ai/domain/: models.py
apps/api/src/interview_ai/observability/: langsmith_setup.py
apps/api/src/interview_ai/repositories/: conversation_repository.py  prompt_repository.py
apps/api/src/interview_ai/schemas/: interview.py
apps/api/src/interview_ai/services/: interview_service.py  skill_client.py
apps/gui/: chat_app.py
apps/skill_server/src/skill_server/: app.py
apps/skill_server/src/skill_server/core/: registry.py
apps/skill_server/src/skill_server/schemas/: requests.py
apps/skill_server/src/skill_server/skills/: question_calibrator.py  rubric_builder.py
data/: interview_memory.db
docs/: api_examples.md
docs/architecture/: decisions.md  overview.md
evaluations/: run_eval.py
evaluations/datasets/: interview_eval.jsonl
evaluations/metrics/: keyword_recall.py
evaluations/prompts/notes/: python_backend.md  system_design.md
scripts/: run_local.ps1
tests/: conftest.py
tests/integration/: test_interview_router.py  test_skill_server_api.py
tests/unit/: test_conversation_repository.py  test_metrics.py  test_schema_validation.py  test_skill_server_skills.py
(+6 files in other folders)
