[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-ai-suite"
version = "0.1.0"
description = "Interview-ready sample project using LangChain, LangGraph, LlamaIndex, and LangSmith"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Interview Candidate" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.2.0",
  "llama-index>=0.11.0",
  "llama-index-llms-openai>=0.2.0",
  "langsmith>=0.1.99",
  "tenacity>=9.0.0",
  "orjson>=3.10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "types-requests>=2.32.0"
]
ui = [
  "streamlit>=1.37.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["apps/api/src", "apps/skill_server/src", "packages/shared/src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["apps/api/src", "apps/skill_server/src", "packages/shared/src", "."]
addopts = "-q --cov=interview_ai --cov=skill_server --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
